--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7786,7 +7786,7 @@ table {
   position: absolute;
   border-bottom: 3px solid #FCE38A;
   left: 0;
-  bottom: 0;
+  bottom: -3%;
   width: 0%;
   height: 3px;
   -webkit-transition: 0.4s;
@@ -8315,14 +8315,14 @@ table {
   left: 50%;
   bottom: -40%;
   width: 60px;
-  height: 4px;
+  height: 3.5px;
   background-color: #e46e6e;
   margin-left: -30px;
 }
 
-@media only screen and (max-width: 600px) {
-  .title-section h2 {
-    line-height: 1.5;
+@media only screen and (max-width: 800px) {
+  .title-section h2::after {
+    bottom: -20%;
   }
 }
 
@@ -8331,13 +8331,14 @@ table {
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
+  line-height: 1.5;
   margin: 65px 120px 85px 120px;
   color: #9c9a9a;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .title-section p {
-    margin: 30px 0 30px 0;
+    margin: 30px 10px;
   }
 }
 
@@ -8400,7 +8401,8 @@ table {
   }
 }
 
-.service .service__content img, .service .service__content i {
+.service .service__content img,
+.service .service__content i {
   font-size: 30px;
   width: 30px;
   margin: 3px 30px 0 0;
@@ -8412,12 +8414,12 @@ table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 40px 20px 40px 20px;
+  margin: 50px 20px;
 }
 
 @media only screen and (max-width: 1200px) {
   .service .service__content .service__content__item {
-    margin: 20px 10px 20px 10px;
+    margin: 20px 10px;
   }
 }
 
@@ -8660,14 +8662,14 @@ table {
 }
 
 .what-we-do .what-we-do__content .what-we-do__content__text .text .text__content::-webkit-scrollbar {
-  width: 10px;
-  height: 80px;
+  width: 7px;
   right: 50%;
+  margin-top: 10px;
 }
 
 .what-we-do .what-we-do__content .what-we-do__content__text .text .text__content::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 5px #9c9393;
-          box-shadow: inset 0 0 5px #9c9393;
+  -webkit-box-shadow: inset 0 0 5px #c0b3b3;
+          box-shadow: inset 0 0 5px #c0b3b3;
   border-radius: 10px;
 }
 
@@ -8680,89 +8682,97 @@ table {
   background: #0eb493;
 }
 
-.what-we-do .what-we-do__content .what-we-do__content__text .text .text__content::-webkit-resizer {
-  height: 80px;
+.what-we-do .what-we-do__content .what-we-do__content__text .text .text__content::-webkit-scrollbar-button {
+  height: 7px;
 }
 
 .feed-back {
   background-color: #f8f8f8f8;
 }
 
-.feed-back .feed-back__content {
+.feed-back .feed-back-width {
   max-width: 1200px;
   margin: auto;
+  padding: 70px 0;
+}
+
+.feed-back .feed-back-width .feed-back__content {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
-  padding: 50px;
+  margin: 0 6%;
 }
 
 @media only screen and (max-width: 1200px) {
-  .feed-back .feed-back__content {
+  .feed-back .feed-back-width .feed-back__content {
     padding: 30px;
     max-width: 1200px;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .feed-back .feed-back__content {
+  .feed-back .feed-back-width .feed-back__content {
     padding: 20px;
     max-width: 1200px;
     display: block !important;
   }
 }
 
-.feed-back .feed-back__content img {
+.feed-back .feed-back-width .feed-back__content img {
   border: 3px solid #95e1d3;
   padding: 35px;
   max-height: 150px;
 }
 
 @media only screen and (max-width: 800px) {
-  .feed-back .feed-back__content img {
+  .feed-back .feed-back-width .feed-back__content img {
     padding: 5px;
     width: 50px;
     height: 50px;
   }
 }
 
-.feed-back .feed-back__content .content-text {
+.feed-back .feed-back-width .feed-back__content .content-text {
   margin-left: 50px;
 }
 
 @media only screen and (max-width: 800px) {
-  .feed-back .feed-back__content .content-text {
+  .feed-back .feed-back-width .feed-back__content .content-text {
     margin-left: 10px;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .feed-back .feed-back__content .content-text {
+  .feed-back .feed-back-width .feed-back__content .content-text {
     margin-left: 0;
   }
 }
 
-.feed-back .feed-back__content .content-text p {
-  font-family: myriad-pro, sans-serif;
+.feed-back .feed-back-width .feed-back__content .content-text p {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-style: italic;
   font-size: 24px;
-  margin: 5px 0 20px 0;
+  margin: 5px 0 7px 0;
+  line-height: 1.4;
   color: #9c9a9a;
+  margin-right: 10%;
 }
 
 @media only screen and (max-width: 800px) {
-  .feed-back .feed-back__content .content-text p {
+  .feed-back .feed-back-width .feed-back__content .content-text p {
     font-size: 15px;
   }
 }
 
-.feed-back .feed-back__content .content-text span {
+.feed-back .feed-back-width .feed-back__content .content-text span {
   font-family: 'Kaushan Script', cursive;
   font-size: 24px;
   position: relative;
   margin-left: 70px;
 }
 
-.feed-back .feed-back__content .content-text span::after {
+.feed-back .feed-back-width .feed-back__content .content-text span::after {
   content: "";
   position: absolute;
   width: 60px;
@@ -8773,26 +8783,33 @@ table {
 }
 
 @media only screen and (max-width: 600px) {
-  .feed-back .feed-back__content .content-text span::after {
+  .feed-back .feed-back-width .feed-back__content .content-text span::after {
     border-bottom: 2px solid #f38181;
     width: 30px;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .feed-back .feed-back__content .content-text span {
+  .feed-back .feed-back-width .feed-back__content .content-text span {
     font-size: 15px;
     margin-left: 45px;
   }
 }
 
-.feed-back .slick-next i {
+.feed-back .slick-next i,
+.feed-back .slick-prev i {
   font-size: 30px;
 }
 
 .feed-back .slider {
-  width: 80%;
-  margin: 100px auto;
+  width: 90%;
+  margin: auto;
+}
+
+@media only screen and (max-width: 800px) {
+  .feed-back .slider {
+    width: 80%;
+  }
 }
 
 .feed-back .slick-slide {
@@ -9123,6 +9140,7 @@ table {
 
 .icon-design {
   background-color: #f5f5f5;
+  padding: 40px 0;
 }
 
 .icon-design .icon-design__content {
@@ -9211,7 +9229,7 @@ table {
   width: 100%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .container-fluid .work .work__content .work__text {
     top: 34%;
   }
@@ -9236,7 +9254,7 @@ table {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .container-fluid .work .work__content .work__text p {
     margin: 10px 0 3px 0;
   }
@@ -9314,6 +9332,11 @@ table {
   width: 65%;
 }
 
+.feed-back-01 .feed-back__content .content-img img {
+  max-height: 180px;
+  margin: auto;
+}
+
 .feed-back-01 .feed-back__content .content-text {
   padding-top: 30px;
 }
@@ -9338,8 +9361,11 @@ table {
 }
 
 .feed-back-01 .feed-back__content .content-text p {
-  font-family: myriad-pro, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-style: italic;
   font-size: 22px;
+  line-height: 1.5;
   margin: 5px 0 20px 0;
   color: #9c9a9a;
 }
@@ -9436,8 +9462,7 @@ table {
   background-image: url("../img/background-say.png");
   padding: 70px 0 15px 0;
   background-size: cover;
-  -o-object-fit: cover;
-     object-fit: cover;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -9814,12 +9839,14 @@ table {
   width: 100%;
   display: block;
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: #ee7676;
 }
 
 .footer .footer__map .footer__map--icon {
   font-size: 20px;
-  padding: 60px 0 0 0;
+  padding-top: 60px;
 }
 
 .footer .footer__map .footer__map--text {
@@ -10227,7 +10254,7 @@ table {
           justify-content: center;
   display: -ms-grid;
   display: grid;
-  margin-top: 80px;
+  margin: 130px 0 150px 0;
   text-align: center;
   cursor: context-menu;
 }
@@ -10238,7 +10265,7 @@ table {
 }
 
 .banner .banner__content .banner__content__top h2 {
-  padding-bottom: 36px;
+  padding: 60px 0 45px 0;
   font-size: 120px;
   font-weight: bold;
   position: relative;
@@ -10275,7 +10302,7 @@ table {
   font-size: 12px;
   text-transform: uppercase;
   width: 120px;
-  margin: 30px auto;
+  margin: 50px auto;
   height: 35px;
   outline: none;
   -webkit-transition: 0.4s all;
