--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,7 +1,3 @@
-
-
-
-
 .search {
     width: 100%;
     @include flex(center, center);
@@ -109,9 +105,8 @@
 
 .title-section {
     max-width: 1200px;
-  text-align: center;
-  margin:auto;
-
+    text-align: center;
+    margin: auto;
     span {
         font-family: 'Kaushan Script', cursive;
         font-size: 24px;
@@ -122,7 +117,6 @@
         font-size: 30px;
         position: relative;
         line-height: 2.3;
-
         @media #{$res600} {
             line-height: 1.5;
         }
@@ -132,27 +126,24 @@
             left: 50%;
             bottom: -40%;
             width: 60px;
-            height: 4px;
+            height: 3.5px;
             background-color: #e46e6e;
             margin-left: -30px;
+            @media #{$res800} {
+                bottom: -20%;
+            }
         }
-        @media #{$res600} {
-            line-height: 1.5;
-        }
-
-
     }
     p {
         font-family: myriad-pro, sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 15px;
-
+        line-height: 1.5;
         margin: 65px 120px 85px 120px;
-
         color: #9c9a9a;
-        @media #{$res600} {
-            margin: 30px 0 30px 0;
+        @media #{$res800} {
+            margin: 30px 10px;
         }
     }
 }
@@ -165,5 +156,4 @@
         color: #000;
     }
     box-shadow: 0 0 6px -2px #000;
-
 }
