--- a/assets/scss/page/top/_team.scss
+++ b/assets/scss/page/top/_team.scss
@@ -198,6 +198,7 @@
     
     .icon-design {
         background-color: #f5f5f5;
+        padding: 40px 0;
         .icon-design__content {
             max-width: 1200px;
             margin: auto;
