--- a/assets/scss/page/top/_about-us.scss
+++ b/assets/scss/page/top/_about-us.scss
@@ -24,7 +24,7 @@
             height: 250px;
             transition: 0.4s;
             background-size: cover;
-            margin: 15px;
+
             @media #{$res1200} {
                 width: 370px;
                 height: 250px;
@@ -57,18 +57,24 @@
         }
         .about-us-01 {
             background-image: url("../img/about-us1.png");
+            margin: 15px 15px 15px 0;
+
             &:hover {
                 background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/about-us1.png');
             }
         }
         .about-us-02 {
             background-image: url("../img/about-us2.png");
+            margin: 15px;
+
             &:hover {
                 background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/about-us2.png');
             }
         }
         .about-us-03 {
             background-image: url("../img/about-us3.png");
+            margin: 15px 0 15px 15px;
+
             &:hover {
                 background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92)), url('../img/about-us3.png');
             }
