--- a/assets/scss/page/top/_team.scss
+++ b/assets/scss/page/top/_team.scss
@@ -51,8 +51,6 @@
                     }
                     @media #{$res1000} {
                         height: 320px;
-                        background-size: contain;
-                        background-repeat: no-repeat;
                         width: 255px;
                     }
                     @media #{$res800} {
@@ -73,20 +71,11 @@
                 }
             }
             .team__content__img {
-                position: absolute;
-                left: 0;
-                top: 44%;
-                display: none;
-                width: 100%;
+               height: 100%;
+               display: none;
                 a {
                     color: #F38181;
-                    margin: 0 -1.7px;
-                    @media #{$res1200} {
-                        margin: 0 -0.5%;
-                    }
-                    @media #{$res1000} {
-                        margin: 0;
-                    }
+                    margin-right: 1px;
                     i {
                         background: #FCE38A;
                         font-size: 24px;
@@ -187,7 +176,9 @@
                 transition: 0.4s;
                 box-shadow: 10px 10px #82e9d6;
                 .team__content__img {
-                    display: block;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
                 }
                 @media #{$res600} {
                     box-shadow: 4px 4px #82e9d6;
