--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -81,7 +81,7 @@
                     content: "";
                     position: absolute;
                     top: 0;
-                    width: 0%;
+                    width: 0;
                     height: 2px;
                     border-top: 2px solid #db5f5f;
                     left: 0;
@@ -90,7 +90,7 @@
                 }
                 &:hover {
                     &::before {
-                        color: white;
+                        color: #fff;
                         transition: 0.4s;
                     }
                     &::after {
@@ -113,13 +113,13 @@
                     font-size: 12px;
                     transition: 0.4s;
                     &:hover {
-                        color: white;
+                        color: #fff;
                         transition: 0.4s;
                     }
                     span {
                         font-weight: bold;
                         font-size: 17px;
-                        padding: 0 5px 0 0;
+                        padding-right: 5px;
                     }
                 }
             }
