--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -168,7 +168,7 @@
             display: flex;
             justify-content: flex-end;
             width: 100%;
-            margin: 0px 30px;
+            margin: 0 30px;
             height: auto;
         }
         @media #{$res370} {
