--- a/assets/scss/page/top/_count.scss
+++ b/assets/scss/page/top/_count.scss
@@ -4,7 +4,7 @@
     margin: auto;
     height: 270px;
     position: relative;
-    color: white;
+    color: #fff;
     background-color: #95E1D3;
     @media #{$res800} {
         height: 200px;
@@ -23,12 +23,12 @@
         text-align: center;
         max-width: 240px;
         width: 100%;
-        padding: 80px 0 0 0;
+        padding-top: 80px;
         @media #{$res800} {
-            padding: 60px 0 0 0;
+            padding-top: 60px;
         }
         @media #{$res370} {
-            padding: 20px 0 0 0;
+          padding-top: 20px;
         }
     }
     .count--border:not(:last-child) {
