--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -105,7 +105,7 @@
     margin: 0 10px 0 20px;
     font-size: 18px;
 }
-
+//copy right footer
 .copyright {
     max-width: 1200px;
     margin: auto;
@@ -124,7 +124,7 @@
         }
     }
 }
-
+// title sections content
 .title-section {
     max-width: 1200px;
     text-align: center;
@@ -173,6 +173,7 @@
     }
 }
 
+// sticky header
 .sticky {
     background: #fff;
     z-index: 12;
@@ -184,6 +185,7 @@
 }
 
 
+// width content
 .container-width{
   max-width: 1200px;
 }
